# mujoco_rl_ur5

./: .dockerignore  .gitignore  CODE_LEARNING_NOTES.ipynb  CURRICULUM_LINE_BY_LINE.ipynb  CURRICULUM_LINE_BY_LINE.md  Dockerfile  LEARNING_GUIDE.ipynb  LEARNING_GUIDE.md  MUJOCO_LOG.TXT  PROJECT_STATUS.ipynb  PROJECT_USAGE_MTD3_STYLE.ipynb  PROJECT_USAGE_MTD3_STYLE.md  README.ipynb  README.md  mjlab_ur5_task.py  play_ur5_reach_mjlab.py  pyproject.toml  requirements-warp.txt  requirements.txt  train_ur5_reach.py  train_ur5_reach_mjlab.py  train_ur5_reach_warp.py  ur5_reach_config.py  ur5_reach_env.py  warp_ur5_config.py  warp_ur5_env.py  warp_ur5_runtime.py
classic/: __init__.py  env.py  test.py  train.py
docs/: IMPLEMENTATION_GUIDE.md  MJLAB_SETUP.md  PARAMETER_REFERENCE.md  PORTABILITY.md  STRUCTURE.md  TRAINING_GUIDE.md  TRAINING_IMPROVEMENTS.md  UPDATE_LOG.md  WARP_PARAMETER_REFERENCE.md
mjx/: __init__.py  backend.py  benchmark.py  env.py  reach_env.py  train.py
models/: vec_normalize.pkl
notebooks/: 01_ur5_reach_tutorial.ipynb  02_codebase_library_notes.ipynb  03_main_and_warp_design_notes.ipynb  03_warp_code_learning_walkthrough.ipynb  05_library_usage_guide.ipynb
sbx_runner/: __init__.py  train.py
scripts/: auto_fetch_remote_models.py  install_sbx_env.sh  remote_train_all_queue.sh  remote_train_main_queue.sh  run_local_main_sequence.ps1
server_scripts/: run_classic_success_queue.sh  run_sbx_experiment.sh  run_total_queue.sh  run_warp_validation_queue.sh  start_classic_success_screen.sh  start_sbx_experiment_screen.sh  start_total_queue_screen.sh  start_warp_validation_screen.sh
ur5/: Dockerfile  README.md  requirements.txt  test_ur5_reach_warp.py  train_env.py  train_ur5_reach_warp.py  ur5_reach_config.py  ur5_reach_env.py  warp_ur5_config.py  warp_ur5_runtime.py
warp_gpu/: __init__.py  env.py  runtime.py  smoke.py  test.py  train.py
zero/: .gitignore  PARAMETER_IMPACT.md  README.md  mtd3_robot_arm.ipynb  pull_after_queue_done.ps1  rl_metrics.py  robot_arm_env.backup_before_sync.py  robot_arm_env.py  robot_arm_mujoco.xml  train_robot_arm.py  train_robot_arm_ppo.py  (+3 more)
(+22 files in other folders)
